# YouTubeAudioExtracter

./: .gitignore  pyproject.toml
extract_audio/: extract.py
